youfull/objects/Market__c.object
<CustomObject>
    <fields>
        <fullName>NRT_Hide_Saved_Column__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The boolean value that is supposed to control the display of saved column in the NRT overlay.</description>
        <label>NRT Hide Saved Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_Format__c</fullName>
        <label>Name Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Exec_Leader_Title__c</fullName>
        <inlineHelpText>Count of Executive leader titles of this market</inlineHelpText>
        <label>Number of Exec Leader Title</label>
        <summaryFilterItems>
            <field>Leader_Title__c.EXEC_IND__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </summaryFilterItems>
        <summaryForeignKey>Leader_Title__c.Market__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OPERTNL_CMPGN_CMPLTN_PCT__c</fullName>
        <label>OPERTNL_CMPGN_CMPLTN_PCT</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Omniture_JS_URL__c</fullName>
        <description>Location in which Omniture Javascript code is stored</description>
        <inlineHelpText>Location in which Omniture Javascript code is stored</inlineHelpText>
        <label>Omniture JS URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Omniture_RSID__c</fullName>
        <description>RSID used in Omniture JS code</description>
        <inlineHelpText>RSID used in Omniture JS code</inlineHelpText>
        <label>Omniture RSID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Omniture_Suite_Name__c</fullName>
        <label>Omniture Suite Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREV_1_CMPGN_NR__c</fullName>
        <label>PREV_1_CMPGN_NR</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Format__c</fullName>
        <label>Phone Format</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode_Format__c</fullName>
        <label>Postcode Format</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Campaign_Count__c</fullName>
        <description>Represents how many prior campaigns a Market want to see.</description>
        <label>Prior Campaign Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPA_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QPA Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rep_Detail_Columns__c</fullName>
        <label>Rep Detail Columns</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rep_LOA_Nr__c</fullName>
        <label>Rep LOA Nr</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMS_Provider_URL__c</fullName>
        <inlineHelpText>Used by SMS Manager to send SMS out.</inlineHelpText>
        <label>SMS Provider URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SPONSOR_QLFYING_ORD_AMT__c</fullName>
        <label>Order Amount for Qualifying Appointment</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_CMPGN_NR__c</fullName>
        <label>SPPY_CMPGN_NR</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_EUP__c</fullName>
        <description>Items to be used in Executive Unit Performance section.</description>
        <label>Section EUP</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Section_Ldrship__c</fullName>
        <description>items to be displayed in leadership section</description>
        <label>Section Ldrship</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Section_PSB__c</fullName>
        <description>items to be used to display in Personal Sales Business</description>
        <label>Section PSB</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Security_and_Privacy_URL__c</fullName>
        <label>Security and Privacy URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Maintenance_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Site Maintenance Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Splash_Page_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Splash Page Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title_Exclusion__c</fullName>
        <label>Title Exclusion</label>
        <picklist>
            <picklistValues>
                <fullName>-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UQ</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>X90_Day_Camp_CNT__c</fullName>
        <label>90 Day Campaign Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>eCard_Status_Message_Header__c</fullName>
        <label>eCard Status Message Header</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>isDisplayBlock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDisplayBlock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDisplayQPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDisplayQPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_YOU_ASLF_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>is YOU ASLF Enabled</description>
        <label>is YOU ASLF Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Market</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Market Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Markets</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Alert_null_check</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Action_Alert_Enabled__c ,  ISNULL(Action_Alerts__c) , false)</errorConditionFormula>
        <errorMessage>Please select Action Alerts value to proceed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Campaign_count</fullName>
        <active>true</active>
        <errorConditionFormula>IF( X90_Day_Camp_CNT__c &gt;6, true, false)</errorConditionFormula>
        <errorMessage>Campaign count cannot be more than 6</errorMessage>
    </validationRules>
</CustomObject>